Job Application for Director, Data Science at Rauxa. AI Principal Data Scientist - PS14902 - Anthem, Inc. Careers. Gousto - Jobs: Data Scientist - Apply online. B.Yond Data Scientist Developer - Intern | SmartRecruiters. Senior Data Scientist ($225k) - HealthTech | Averity. The Climate Corporation Careers - Data Scientist - Statistics. The Climate Corporation Careers - Data Scientist - Big Data. The Climate Corporation Careers - Senior Data Scientist -  Corn Modeling. Job Application for Data Science Consulting  Intern at Domo. Job Application for Data Science Consulting Intern at Domo. Data Science Lead. Splunk Data Scientist - EY Careers.       FIGHT FRAUD! As a Data Scientist - FRISS | fraud, risk & compliance     . Job Application for Lead Data Scientist, Applied Machine Learning at Tempus. CACI Ltd - Jobs: Data Scientist - Apply online. The Hut Group - Jobs: Fraud Junior Data Scientist - Apply online. Data Scientist, Behavioral Science Specialist ... - Crisis Text Line - Jobs. Crossover Health Careers - Data Scientist. Talkspace - Jobs: Data Scientist, User Behavior - Apply online. Job Application for Senior Data Scientist at Ask Media Group. DataProphet Junior Data Scientist | SmartRecruiters. DataProphet Senior Data Scientist | SmartRecruiters.       (Ref. 474/2019) Data Science / Project Manager - Syone     . Publicis Groupe Senior Data Scientist | SmartRecruiters.     Data Scientist at Quantium . Postman - Jobs: Data Science Intern, Analytics - Apply online.       Data Science Internship (MSc or PhD) Health care - Pacmed     . Job Application for Data Scientist at WELL Health Inc.. Data Scientist ,China - Fractal Analytics - Career Page.       Data Scientist – Natural Language Processing - DefinedCrowd     . Job Application for Data Scientist, Risk  at Brex. Job @ talpasolutions (Essen): Data Scientist | JOIN. Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN. Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN. Job @ Medlanes (Berlin): 

--- a/data-science.html
+++ b/data-science.html
@@ -45,6 +45,18 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/rauxa/jobs/4373994002'>Job Application for Director, Data Science at Rauxa</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://anthem.referrals.selectminds.com/jobs/ai-principal-data-scientist-ps14902-38836'>AI Principal Data Scientist - PS14902 - Anthem, Inc. Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://gousto.workable.com/j/199E482421'>Gousto - Jobs: Data Scientist - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BYond/743999692325746-data-scientist-developer-intern'>B.Yond Data Scientist Developer - Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -92,7 +104,7 @@ Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://workable.com/j/06CA849781'>CACI Ltd - Jobs: Data Scientist - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/06CA849781'>CACI Ltd - Jobs: Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of Data Scientist at CACI Ltd.</p>
 <hr/>
@@ -270,7 +282,7 @@ and artificial intelligence advances? In an increasingly connected world, massiv
 and artificial intelligence advances? In an increasingly connected world, massive
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/uipath/3171ccce-9e90-47a1-b800-11b4c75c4821'>UiPath - Senior Customer Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/uipath/3171ccce-9e90-47a1-b800-11b4c75c4821'>UiPath - Senior Customer Data Scientist</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -384,12 +396,12 @@ federal?...</p>
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/averoinc/62bec7fa-9b50-4ad7-9daf-41587754d087'>Avero - Data Science Modeler</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/averoinc/62bec7fa-9b50-4ad7-9daf-41587754d087'>Avero - Data Science Modeler</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... You will have the opportunity to leverage Avero's robust historical/real time 
 datasets and machine learning infrastructure to develop and tackle the complex?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bixal/b562b606-2228-4eb1-b1b9-7bdc13b16e49'>Bixal - Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/bixal/b562b606-2228-4eb1-b1b9-7bdc13b16e49'>Bixal - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -401,7 +413,7 @@ datasets and machine learning infrastructure to develop and tackle the complex?.
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://upwork-tac.workable.com/j/209D2D91FF'>Upwork - Jobs: Senior Data Scientist - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://upwork-tac.workable.com/j/209D2D91FF'>Upwork - Jobs: Senior Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light">Dubai</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -415,7 +427,7 @@ datasets and machine learning infrastructure to develop and tackle the complex?.
 engineer. Your work will impact millions of our customers. As part of the 
 Marketing?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/nicesystems/job/osBzafww'>NICE Careers - Data Scientist</a></h5> 
+<h5><a href='http://jobs.jobvite.com/nicesystems/job/osBzafww'>NICE Careers - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -431,7 +443,7 @@ Marketing?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999692048249-principal-data-scientist'>Bey Principal Data Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692048249-principal-data-scientist'>Bey Principal Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -468,23 +480,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Cambridge Cambridge, MA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://crisistextline.workable.com/j/E04B7C7AEE'>Crisis Text Line - Jobs: Data Scientist, Behavioral Science Specialist - Apply online</a></h5> 
-<p><span class="badge badge-light">New York, United States</span></p>
-<p>Posted on: 2019-07-20</p>
-<hr/>
-<h5><a href='https://xebiacareers.recruitee.com/o/junior-data-engineer-april-2020'>
-      Junior Data Scientist Xccelerated
-    </a></h5> 
-<p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
-<p>Posted on: 2019-07-20</p>
-<hr/>
-<h5><a href='https://expedia.wd5.myworkdayjobs.com/search/job/USA---Washington---Bellevue/Software-Dev-Engineer-II---Data-Science_R-43972?source=BuiltInSeattle'>Software Dev Engineer II - Data Science</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 10, 2019 ... Expedia Local Expert team is looking for a highly motivated Machine Learning 
-engineer. Your work will impact millions of our customers. As part of the 
-Marketing?...</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
