--- a/machine.html
+++ b/machine.html
@@ -39,15 +39,19 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/thredup/319d8b84-ceec-4d9c-97c7-5a5b89de60d8'>thredUP - Machine Learning Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://so1.join.com/jobs/258010-machine-learning-engineer-m-f-x'>Job @ SO1 (Berlin): Machine Learning Engineer (m/f/x) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lightmatter/3078e929-7571-4ab5-b2df-b22aef74838c'>Lightmatter - Machine Learning Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/lightmatter/3078e929-7571-4ab5-b2df-b22aef74838c'>Lightmatter - Machine Learning Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lightmatter/c42beaff-467d-4368-a4ac-c212a2cd4aa2'>Lightmatter - Software Engineer - Machine Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/lightmatter/c42beaff-467d-4368-a4ac-c212a2cd4aa2'>Lightmatter - Software Engineer - Machine Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -223,7 +227,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/qualtrics/jobs/1774038'>Job Application for iQ Machine Learning Engineer - Seattle  at Qualtrics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/qualtrics/jobs/1774038'>Job Application for iQ Machine Learning Engineer - Seattle  at Qualtrics</a></h5> 
 <p><span class="badge badge-light">Seattle Seattle</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -259,7 +263,7 @@ knowledge and outstanding database, data analytics and programming skills.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/phdata/jobs/1461947'>Job Application for Machine Learning Operations Engineer at phData</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/phdata/jobs/1461947'>Job Application for Machine Learning Operations Engineer at phData</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -289,7 +293,7 @@ Prior strong expertise and experience in machine learning and data science?...</
 <p>Jul 9, 2019 ... Interested to learn more about it? Let's chat. Especially if: - Research experience 
 in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <hr/>
-<h5><a href='https://opentextats.avature.net/careers/JobDetail/Montreal-QC-Canada-Technical-Product-Manager-Machine-Learning/24917'>Technical Product Manager - Machine Learning - Canada, QC, Montreal - 24917</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opentextats.avature.net/careers/JobDetail/Montreal-QC-Canada-Technical-Product-Manager-Machine-Learning/24917'>Technical Product Manager - Machine Learning - Canada, QC, Montreal - 24917</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -421,7 +425,7 @@ Machine Learning. We are currently seeking a motivated human to join our team
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://rapidminer.workable.com/j/88EA6EA369'>RapidMiner - Jobs: Machine Learning Software Developer (Java) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rapidminer.workable.com/j/88EA6EA369'>RapidMiner - Jobs: Machine Learning Software Developer (Java) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -469,10 +473,6 @@ are?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... As a Machine Learning Engineer at Lastline, you will develop new machine 
 learning models and improve existing ones to enhance our network detection?...</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/workfusion/67ddd885-308b-44be-938e-9b2ce7b2551f'>WorkFusion - Software Engineer (RPA &amp; Machine Learning)</a></h5> 
-<p><span class="badge badge-light">Minsk</span></p>
-<p>Posted on: 2019-07-11</p>
 <hr/>
 
 
